# project-gary

./: README.md
backend/: pyproject.toml  tests_placeholder.txt
backend/opportunityforge/: __init__.py  main.py
backend/opportunityforge/agents/: base.py  dossier.py
backend/opportunityforge/api/: routes.py
backend/opportunityforge/models/: domain.py
backend/opportunityforge/services/: scoring.py
backend/tests/: test_scoring.py
docs/: architecture.md
frontend/: package.json
frontend/src/routes/: +page.svelte
