[project]
name = "opportunityforge"
version = "0.1.0"
description = "Public-data business opportunity intelligence backend"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "pydantic>=2.8.0",
  "sqlmodel>=0.0.22",
  "sqlalchemy>=2.0.0",
  "uvicorn>=0.30.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
